# sjsubark

./: .gitignore  LICENSE  README.md  TODO.md  docker-compose.yaml  go.mod  go.sum  install.sh  main.go
app/: README.md  docker-compose.yaml  next.config.ts  package-lock.json  package.json  tsconfig.json
app/src/app/: layout.tsx  page.tsx
config/: config.go
db/: README.md  docker-compose.yaml  migrate.go  schema.sql  server.go  sjsubark.sql
db/datastore/: datastore.go
db/migrations/: calendar_adjust_1_11_26.sql  calendar_init_1_10_26.sql  calendar_start_end_1_16_26.sql  garage_fullness_trim_col_pt2_1_12_26.sql
etl/: campus_close.json  campus_close_csv.py  main.go
etl/config/: config.go
etl/extract/: csv_extractor.go  extractor.go  legacy_csv_extractor.go  web_extractor.go  web_garage.go
etl/loader/: csv_loader.go  loader.go  psql_loader.go
etl/sjsu/: close_campus.go  school_year.go  semester.go
etl/sjsucalendar/: closecampus.go  sjsucalendar.go
etl/transform/: schoolcalendar.go  transformer.go
extract/: extract.go  extractor.go  web_garage.go
inference/: .dockerignore  .gitignore  Dockerfile  boost_pipelines.joblib  docker-compose.yaml  gradient_boost_model.pkl  gradient_boost_pipeline.joblib  pyproject.toml  server.py
inference/core/: __init__.py  sql.py  trainedmodel.py
inference/core/models/: __init__.py  calendardate.py  garage.py
inference/experiment/: retest.ipynb  testing.ipynb
inference/experiment/.ipynb_checkpoints/: testing-checkpoint.ipynb
server/: main.go
transform/: schoolcalendar.go  transformer.go
(+17 files in other folders)
